# privacypass-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
.github/workflows/: ci.yml
benchmarks/: bench_crypto.cpp  bench_crypto_provider.cpp  bench_main.cpp  bench_serialization.cpp  bench_token_issuance.cpp
docs/: crypto_backend.md
examples/: basic_flow.cpp  moq_blind_rsa_auth.cpp  moq_client.cpp  moq_relay.cpp
extensions/moq/include/privacy_pass/extensions/: moq.hpp
extensions/moq/include/privacy_pass/extensions/moq/: auth_scope.hpp  authorization_info.hpp
extensions/moq/src/: auth_scope.cpp  authorization_info.cpp
include/privacy_pass/: privacy_pass.hpp
include/privacy_pass/core/: client.hpp  issuer.hpp  origin.hpp  serialization.hpp  token.hpp  token_authenticator.hpp  token_challenge.hpp  token_provider.hpp  token_request.hpp  token_response.hpp  types.hpp
include/privacy_pass/crypto/: blind_rsa.hpp  hash.hpp  random.hpp  voprf.hpp
include/privacy_pass/http/: auth_scheme.hpp
include/privacy_pass/moq/: auth_scope.hpp  authorization_info.hpp  client.hpp  relay.hpp  types.hpp
src/core/: client.cpp  issuer.cpp  origin.cpp  serialization.cpp  token.cpp  token_authenticator.cpp  token_challenge.cpp  token_provider.cpp  token_request.cpp  token_response.cpp  types.cpp
src/crypto/: blind_rsa.cpp  common.hpp  compat.hpp  hash.cpp  init.cpp  random.cpp  voprf.cpp
src/http/: auth_scheme.cpp  header_parser.cpp
src/moq/: auth_scope.cpp  authorization_info.cpp  moq_client.cpp  moq_relay.cpp
tests/: test_blind_rsa.cpp  test_client.cpp  test_crypto.cpp  test_crypto_provider.cpp  test_http.cpp  test_integration.cpp  test_issuer.cpp  test_main.cpp  test_moq.cpp  test_origin.cpp  test_serialization.cpp  test_token.cpp  test_token_challenge.cpp  test_token_request.cpp  test_types.cpp  test_vector_utils.hpp  test_voprf.cpp
tests/test_data/: blindrsa_rfc9474_sha384_pss.json  voprf_p384_v20.json
